--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
     "Welcome": "Welcome to Abstract Play!",
-    "Make time for games": "Make time for games"
+    "Make time for games": "Make time for games",
+    "Log In": "Log In",
+    "Log Out": "Log Out"
 }
