Rewrite almost everything. Using react-router-dom instead of farce, and amplify for authorization. Now users can stay logged in. Refactor react classes as react functions. The game interface is now in it's own "page". Navigation works. Removed warning (except for console logging warnings).

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,9 +1,61 @@
 {
+    "Abstract Play": "Abstract Play",
+    "Menu": "Menu",
     "Welcome": "Welcome to Abstract Play!",
     "Make time for games": "Make time for games",
-    "Log In": "Log In",
-    "Log Out": "Log Out",
+    "LogIn": "Log In",
+    "LogOut": "Log Out",
     "Login Error": "Login Error",
+    "Error": "Error!",
     "Generic login error message": "An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
-    "Close button label": "Close"
+    "Your games": "Your games",
+    "Your move": "Your move",
+    "Opponent's move": "Opponent's move",
+    "Your challenges": "Your challenges",
+    "Response needed": "Response needed",
+    "Waiting on response": "Waiting on response",
+    "Challenge Details": "Challenge Details",
+    "Revoke challenge": "Revoke challenge",
+    "Close": "Close",
+    "Accept": "Accept",
+    "Reject": "Reject",
+    "Respond": "Respond",
+    "New Challenge": "New Challenge",
+    "Challenge": "Challenge",
+    "View": "View",
+    "IssueChallenge": "Issue a new challenge",
+    "ChallengeDescriptionNoVariants": "You issued a challenge for a game of {{game}}",
+    "ChallengeDescriptionVariants": "You issued a challenge for a game of {{game}} with variants {{variants}}",
+    "NoOtherPlayers": "No other players yet.",
+    "OtherPlayers": "So far the following other players will participate in the game: {{others}}.",
+    "TwoPlayersChallengeDescriptionNoVariants": "You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
+    "TwoPlayersChallengeDescriptionVariants": "You challenged {{other}} to a game of {{game}}.",
+    "Notes": "Notes: ",
+    "ChallengerNotes": "Challenger notes: ",
+    "ChallengeClock": "The clock will be {{start}}/{{inc}}/{{max}}.",
+    "NumChallenge": "There will be {{num}} players in this game.",
+    "NoOtherPlayersAccepted": "No other players have accepted yet.",
+    "OtherPlayersAccepted": "The following other players have already accepted {{others}}",
+    "ChallengeResponseDescVars": "{{opp}} challenged you to a game of {{game}} with variants {{variants}}",
+    "ChallengeResponseDescNoVars": "{{opp}} challenged you to a game of {{game}} with no variants",
+    "Select": "select",
+    "ChooseGame": "Choose a game:",
+    "ChooseOpponent": "Choose an opponent:",
+    "NoUsers": "No users!",
+    "ProfileName": "Your desired display name. It must be unique across names currently in use and those recently used.",
+    "ProfileCountry": "2 Character Country code of where you want to tell people you're from",
+    "ProfileTagline": "A free-form tagline (255 characters max)",
+    "ProfileAnon": "Would you like to be anonymous?",
+    "ProfileConsent": "Do you consent to the Abstract Play's terms of service and the privacy policy?",
+    "EnterMove": "Enter your move:",
+    "OppsMove": "Opponent's move",
+    "ChallengeFrom": "{{game}} challenge from {{challenger}}",
+    "ChallengedTwoPlayers": "{{game}} against {{other}}",
+    "ChallengedNoOthers": "{{game}}, no other players yet.",
+    "ChallengedOthers": "{{game}}, other players: {{others}}",
+    "GameNoMoveTwoPlayer": "{{game}} against {{opponent}}",
+    "GameToMoveTwoPlayer": "{{game}} against {{opponent}}",
+    "GameNoMoveNPlayer": "{{game}}, to move: {{opponents}}",
+    "GameToMoveNPlayer": "{{game}} against: {{opponents}}",
+    "WelcomePlayer": "Welcome {{me}}"
 }
