--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -58,5 +58,7 @@
     "GameToMoveTwoPlayer": "{{game}} against {{opponent}}",
     "GameNoMoveNPlayer": "{{game}}, to move: {{opponents}}",
     "GameToMoveNPlayer": "{{game}} against: {{opponents}}",
-    "WelcomePlayer": "Welcome {{me}}"
+    "WelcomePlayer": "Welcome {{me}}",
+    "ToMove": "{{player}} to move.",
+    "Waiting": "Waiting on other players to submit their moves"
 }
