--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,10 +17,11 @@
     "Challenge Details": "Challenge Details",
     "Revoke challenge": "Revoke challenge",
     "Close": "Close",
+    "Save": "Save",
     "Accept": "Accept",
     "Reject": "Reject",
     "Respond": "Respond",
-    "New Challenge": "New Challenge",
+    "NewChallenge": "New Challenge",
     "Challenge": "Challenge",
     "View": "View",
     "IssueChallenge": "Issue a new challenge",
@@ -39,8 +40,8 @@
     "ChallengeResponseDescVars": "{{opp}} challenged you to a game of {{game}} with variants {{variants}}",
     "ChallengeResponseDescNoVars": "{{opp}} challenged you to a game of {{game}} with no variants",
     "Select": "select",
-    "ChooseGame": "Choose a game:",
-    "ChooseOpponent": "Choose an opponent:",
+    "ChooseGame": "Choose a game: ",
+    "ChooseOpponent": "Choose an opponent: ",
     "NoUsers": "No users!",
     "ProfileName": "Your desired display name. It must be unique across names currently in use and those recently used.",
     "ProfileCountry": "2 Character Country code of where you want to tell people you're from",
@@ -60,5 +61,37 @@
     "GameToMoveNPlayer": "{{game}} against: {{opponents}}",
     "WelcomePlayer": "Welcome {{me}}",
     "ToMove": "{{player}} to move.",
-    "Waiting": "Waiting on other players to submit their moves"
+    "Waiting": "Waiting on other players to submit their moves",
+    "Player": "Player",
+    "History": "History",
+    "Current": "Current",
+    "Explore": "Explore",
+    "MakeMove": "Make a move",
+    "Board": "Board",
+    "Moves": "Moves",
+    "PickVariant": "Select a variant",
+    "PickOneVariant": "Select at most one of:",
+    "PickAnyVariant": "Select any of:",
+    "SelectAGame": "Please select a game",
+    "SelectAnOpponent": "Please select an opponent",
+    "ChangeRenderOptions": "Change board display options",
+    "ChooseColors": "Choose colors",
+    "Color": "Select color scheme",
+    "StandardColorsLong": "Standard colours (9 max)",
+    "ColorBlindLong": "Colour-blind-friendly colours (4 max)",
+    "ColorPatternsLong": "Black-and-white patterns (10 max)",
+    "StandardColors": "Standard",
+    "ColorBlind": "Colour blind",
+    "ColorPatterns": "Black and white",
+    "Level": "Where would you like these colors applied?",
+    "LevelAll": "For all games",
+    "LevelMetaGame": "For all {{game}} games",
+    "LevelGame": "Only for this game",
+    "ChooseAnnotations": "Annotate?",
+    "Annotate": "Show last move indicators",
+    "AnnotationLevel": "Where would you like this choice applied?",
+    "DisplaySettings" : "Display Settings",
+    "Rotate": "Rotate board",
+    "MarkAsWin": "Mark as win",
+    "MarkAsLoss": "Mark as loss"
 }
