Mostly styling of the welcome page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,7 @@
     "Abstract Play": "Abstract Play",
     "Menu": "Menu",
     "Welcome": "Welcome to Abstract Play!",
+    "AvailableGames": "Available Games",
     "Make time for games": "Make time for games",
     "LogIn": "Log In",
     "LogOut": "Log Out",
