--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,17 +4,22 @@
     "Welcome": "Welcome to Abstract Play!",
     "AvailableGames": "Available Games",
     "Make time for games": "Make time for games",
+    "About": "About",
     "LogIn": "Log In",
     "LogOut": "Log Out",
     "Login Error": "Login Error",
     "Error": "Error!",
     "Generic login error message": "An error occurred while trying to log in. If the problem persists, please contact the system administrator.",
-    "Your games": "Your games",
-    "Your move": "Your move",
-    "Opponent's move": "Opponent's move",
-    "Your challenges": "Your challenges",
-    "Response needed": "Response needed",
-    "Waiting on response": "Waiting on response",
+    "YourGames": "Your games",
+    "YourMove": "Your move",
+    "NoYourMove": "No games waiting for your move.",
+    "OpponentMove": "Opponent's move",
+    "NoOpponentMove": "No games waiting on opponent's move.",
+    "YourChallenges": "Your challenges",
+    "ChallengeResponse": "Response needed",
+    "NoChallengeResponse": "No challenges needing a response",
+    "WaitingResponse": "Waiting on response",
+    "NoWaitingResponse": "No challenges waiting on response",
     "Challenge Details": "Challenge Details",
     "Revoke challenge": "Revoke challenge",
     "Close": "Close",
@@ -49,7 +54,7 @@
     "ProfileTagline": "A free-form tagline (255 characters max)",
     "ProfileAnon": "Would you like to be anonymous?",
     "ProfileConsent": "Do you consent to the Abstract Play's terms of service and the privacy policy?",
-    "ChooseMove": "Choose a move: ",
+    "ChooseMove": "Choose move: ",
     "EnterMove": "Enter/Click a move:",
     "OppsMove": "Opponent's move",
     "ChallengeFrom": "{{game}} challenge from {{challenger}}",
@@ -60,7 +65,7 @@
     "GameToMoveTwoPlayer": "{{game}} against {{opponent}}",
     "GameNoMoveNPlayer": "{{game}}, to move: {{opponents}}",
     "GameToMoveNPlayer": "{{game}} against: {{opponents}}",
-    "WelcomePlayer": "Welcome {{me}}",
+    "WelcomePlayer": "Dashboard for {{me}}",
     "ToMove": "{{player}} to move.",
     "Waiting": "Waiting on other players to submit their moves",
     "Player": "Player",
@@ -70,6 +75,10 @@
     "MakeMove": "Make a move",
     "Board": "Board",
     "Moves": "Moves",
+    "Submit": "Submit",
+    "SubmitMove": "Submit your move: {{move}}",
+    "Winning": "Mark this move as winning",
+    "Losing": "Mark this move as losing",
     "PickVariant": "Select a variant",
     "PickOneVariant": "Select at most one of:",
     "PickAnyVariant": "Select any of:",
