Tiny bit of progress

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -79,6 +79,12 @@
     "SubmitMove": "Submit your move: {{move}}",
     "Winning": "Mark this move as winning",
     "Losing": "Mark this move as losing",
+    "GoBegin": "Show beginning of game",
+    "GoPrev": "Show previous move",
+    "GoNext": "Show next move (and first variant if any)",
+    "GoNextVar": "Show next move variant",
+    "GoPrevVar": "Show previous variant",
+    "GoCurrent": "Show current position", 
     "PickVariant": "Select a variant",
     "PickOneVariant": "Select at most one of:",
     "PickAnyVariant": "Select any of:",
