Bye-bye bootstrap. And good riddance!

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,13 +21,13 @@
     "WaitingResponse": "Waiting on response",
     "NoWaitingResponse": "No challenges waiting on response",
     "Challenge Details": "Challenge Details",
+    "NewChallenge": "New challenge",
     "Revoke challenge": "Revoke challenge",
     "Close": "Close",
     "Save": "Save",
     "Accept": "Accept",
     "Reject": "Reject",
     "Respond": "Respond",
-    "NewChallenge": "New Challenge",
     "Challenge": "Challenge",
     "View": "View",
     "IssueChallenge": "Issue a new challenge",
@@ -49,6 +49,7 @@
     "ChooseGame": "Choose a game: ",
     "ChooseOpponent": "Choose an opponent: ",
     "NoUsers": "No users!",
+    "NewProfile": "Create profile",
     "ProfileName": "Your desired display name. It must be unique across names currently in use and those recently used.",
     "ProfileCountry": "2 Character Country code of where you want to tell people you're from",
     "ProfileTagline": "A free-form tagline (255 characters max)",
