Key board shortcuts for game navigation . Bug fixes.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -39,11 +39,13 @@
     "TwoPlayersChallengeDescriptionNoVariants": "You challenged {{other}} to a game of {{game}}.",
     "Notes": "Notes: ",
     "ChallengerNotes": "Challenger notes: ",
+    "ChallengeDetails": "Challenge details:",
     "ChallengeClock": "The clock will be {{start}}/{{inc}}/{{max}}.",
     "NumChallenge": "There will be {{num}} players in this game.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
     "OtherPlayersAccepted": "The following other players have already accepted {{others}}",
-    "ChallengeResponseDescVars": "{{opp}} challenged you to a game of {{game}} with variants {{variants}}",
+    "ChallengeResponseDescVars": "{{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
+    "ChallengeResponseDescVars1": "{{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
     "ChallengeResponseDescNoVars": "{{opp}} challenged you to a game of {{game}} with no variants",
     "Select": "select",
     "ChooseGame": "Choose a game: ",
@@ -80,12 +82,12 @@
     "SubmitMove": "Submit your move: {{move}}",
     "Winning": "Mark this move as winning",
     "Losing": "Mark this move as losing",
-    "GoBegin": "Show beginning of game",
-    "GoPrev": "Show previous move",
-    "GoNext": "Show next move (and first variant if any)",
-    "GoNextVar": "Show next move variant",
-    "GoPrevVar": "Show previous variant",
-    "GoCurrent": "Show current position", 
+    "GoBegin": "Show beginning of game. Keys: Home or 'h'.",
+    "GoPrev": "Show previous move. Keys: left arrow or 'j'.",
+    "GoNext": "Show next move (and first variant if any). Keys: right arrow or 'k'.",
+    "GoNextVar": "Show next move variant. Keys: down arrow or 'm'.",
+    "GoPrevVar": "Show previous variant. Keys: up arrow or 'i'.",
+    "GoCurrent": "Show current position. Keys: End or 'l'.", 
     "PickVariant": "Select a variant",
     "PickOneVariant": "Select at most one of:",
     "PickAnyVariant": "Select any of:",
