Bugs. Add resign button (still needs backend).

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,6 +24,7 @@
     "NewChallenge": "New challenge",
     "Revoke challenge": "Revoke challenge",
     "Close": "Close",
+    "Cancel": "Cancel",
     "Save": "Save",
     "Accept": "Accept",
     "Reject": "Reject",
@@ -79,7 +80,10 @@
     "Board": "Board",
     "Moves": "Moves",
     "Submit": "Submit",
+    "CompleteMove": "Complete move",
     "SubmitMove": "Submit your move: {{move}}",
+    "Resign": "Resign",
+    "ConfirmResign": "Confirm resignation",
     "Winning": "Mark this move as winning",
     "Losing": "Mark this move as losing",
     "GoBegin": "Show beginning of game. Keys: Home or 'h'.",
