hard time timeouts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,6 +15,7 @@
     "NoYourMove": "No games waiting for your move.",
     "OpponentMove": "Opponent's move",
     "NoOpponentMove": "No games waiting on opponent's move.",
+    "CompletedGames": "Completed Games",
     "YourChallenges": "Your challenges",
     "ChallengeResponse": "Response needed",
     "NoChallengeResponse": "No challenges needing a response",
@@ -41,7 +42,9 @@
     "Notes": "Notes: ",
     "ChallengerNotes": "Challenger notes: ",
     "ChallengeDetails": "Challenge details:",
-    "ChallengeClock": "The clock will be {{start}}/{{inc}}/{{max}}.",
+    "ChallengeClock": "The clock start time will be {{start}} hours, incremented by {{inc}} hours after each move, with a maximum of {{max}} hours.",
+    "HardTime": "Hard time: the system will enforce time limits.",
+    "SoftTime": "No hard time: a loss on time need to be claimed by the opponent.",
     "NumChallenge": "There will be {{num}} players in this game.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
     "OtherPlayersAccepted": "The following other players have already accepted {{others}}",
@@ -51,6 +54,14 @@
     "Select": "select",
     "ChooseGame": "Choose a game: ",
     "ChooseOpponent": "Choose an opponent: ",
+    "ChooseClockStart": "Clock start",
+    "ChooseClockIncrement": "Clock increment",
+    "ChooseClockMax": "Clock max",
+    "ChooseClockHard": "Hard Clock?",
+    "HelpClockHard": "A hard clock is enforced by the system.",
+    "HelpClockStart": "Time on clock at the start of the game.",
+    "HelpClockIncrement": "Time added after every move.",
+    "HelpClockMax": "Remaining time won't become more than this.",
     "NoUsers": "No users!",
     "NewProfile": "Create profile",
     "ProfileName": "Your desired display name. It must be unique across names currently in use and those recently used.",
