--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,7 +23,8 @@
     "NoWaitingResponse": "No challenges waiting on response",
     "Challenge Details": "Challenge Details",
     "NewChallenge": "New challenge",
-    "Revoke challenge": "Revoke challenge",
+    "RevokeChallenge": "Revoke challenge",
+    "RevokeAcceptance": "Revoke acceptance",
     "Close": "Close",
     "Cancel": "Cancel",
     "Save": "Save",
@@ -33,10 +34,12 @@
     "Challenge": "Challenge",
     "View": "View",
     "IssueChallenge": "Issue a new challenge",
-    "ChallengeDescriptionNoVariants": "You issued a challenge for a game of {{game}}",
-    "ChallengeDescriptionVariants": "You issued a challenge for a game of {{game}} with variants {{variants}}",
-    "NoOtherPlayers": "No other players yet.",
-    "OtherPlayers": "So far the following other players will participate in the game: {{others}}.",
+    "ChallengeDescriptionNoVariants": "You issued a challenge for a game of {{game}}.",
+    "ChallengeDescriptionVariants": "You issued a challenge for a game of {{game}} with variants {{variants}}.",
+    "ChallengeDescriptionNoVariantsAccepter": "You accepted a challenge from {{challenger}} for a game of {{game}}.",
+    "ChallengeDescriptionVariantsAccepter": "You accepted a challenge from {{challenger}} for a game of {{game}} with variants {{variants}}.",
+    "OtherPlayers": "So far the following other players are willing to participate in the game: {{others}}.",
+    "PlayersAccepted": "So far the following players are willing to participate in the game: {{others}}.",
     "TwoPlayersChallengeDescriptionVariants": "You challenged {{other}} to a game of {{game}} with variants {{variants}}.",
     "TwoPlayersChallengeDescriptionNoVariants": "You challenged {{other}} to a game of {{game}}.",
     "Notes": "Notes: ",
@@ -45,9 +48,10 @@
     "ChallengeClock": "The clock start time will be {{start}} hours, incremented by {{inc}} hours after each move, with a maximum of {{max}} hours.",
     "HardTime": "Hard time: the system will enforce time limits.",
     "SoftTime": "No hard time: a loss on time need to be claimed by the opponent.",
-    "NumChallenge": "There will be {{num}} players in this game.",
+    "NumChallenge2": "There will be 2 players in this game.",
+    "NumChallenge": "There will be {{num}} players in this game. {{players}}. Seating will be random.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
-    "OtherPlayersAccepted": "The following other players have already accepted {{others}}",
+    "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
     "ChallengeResponseDescVars": "{{opp}} challenged you to a game of {{game}} with variants: {{variants}}",
     "ChallengeResponseDescVars1": "{{opp}} challenged you to a game of {{game}} with variant: {{variants}}",
     "ChallengeResponseDescNoVars": "{{opp}} challenged you to a game of {{game}} with no variants",
@@ -83,10 +87,7 @@
     "ChallengedTwoPlayers": "{{game}} against {{other}}",
     "ChallengedNoOthers": "{{game}}, no other players yet.",
     "ChallengedOthers": "{{game}}, other players: {{others}}",
-    "GameNoMoveTwoPlayer": "{{game}} against {{opponent}}",
-    "GameToMoveTwoPlayer": "{{game}} against {{opponent}}",
-    "GameNoMoveNPlayer": "{{game}}, to move: {{opponents}}",
-    "GameToMoveNPlayer": "{{game}} against: {{opponents}}",
+    "GameAgainst": "{{game}} against {{opp}}",
     "WelcomePlayer": "Dashboard for {{me}}",
     "ToMove": "{{player}} to move.",
     "Waiting": "Waiting on other players to submit their moves",
@@ -120,6 +121,8 @@
     "PickAnyVariant": "Select any of:",
     "SelectAGame": "Please select a game",
     "SelectAnOpponent": "Please select an opponent",
+    "SelectOpponents": "Please select {{count}} opponents",
+    "SelectSeating": "Select seating, that is in what order players will start the game.",
     "ChangeRenderOptions": "Change board display options",
     "ChooseColors": "Choose colors",
     "Color": "Select color scheme",
@@ -143,5 +146,14 @@
     "Comment": "Comment",
     "MyDashboard": "Play",
     "IncludeDrawOffer": "include draw offer with move",
-    "AcceptDraw": "Accept draw offer"
+    "AcceptDraw": "Accept draw offer",
+    "NumPlayers": "Number of players:",
+    "Seating": "Seating:",
+    "SeatingRandom": "Random",
+    "Seating1": "I play first",
+    "Seating2": "I play second",
+    "seatingMeFirst": "You will play first.",
+    "seatingMeSecond": "Your opponent will play first.",
+    "seatingRandom": "Seating will be random.",
+    "and": "and"
 }
