It's getting there...

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
     "AvailableGames": "Available Games",
     "Make time for games": "Make time for games",
     "About": "About",
+    "Games": "Games",
     "LogIn": "Log In",
     "LogOut": "Log Out",
     "Login Error": "Login Error",
