Bug fixes and better Status display

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,11 +91,14 @@
     "GameAgainst": "{{game}} against {{opp}}",
     "WelcomePlayer": "Dashboard for {{me}}",
     "ToMove": "{{player}} to move.",
+    "Variant": "Variant",
+    "Variants": "Variants",
     "Waiting": "Waiting on other players to submit their moves",
     "Player": "Player",
     "History": "History",
     "Current": "Current",
     "Explore": "Explore",
+    "Status": "Status",
     "MakeMove": "Make a move",
     "Board": "Board",
     "Moves": "Moves",
@@ -145,6 +148,8 @@
     "MarkAsWin": "Mark as win",
     "MarkAsLoss": "Mark as loss",
     "Comment": "Comment",
+    "CommentTooLong": "Comments can be at most 4K characters",
+    "CommentsTooLong": "You are approaching that max total size of comments for a game. Soon new comments won't be accepted.",
     "MyDashboard": "Play",
     "IncludeDrawOffer": "include draw offer with move",
     "IncludeAcceptDrawOffer": "a draw has been offered. Do you accept?",
